[gd_scene load_steps=19 format=3 uid="uid://dn1171j3jsp3w"]

[ext_resource type="Texture2D" uid="uid://x7ijamgyf3v" path="res://assets/Complete_GUI_Essential_Pack_Free_Version/01_Basic_Collection/01_Flat_Theme/Spritesheets/Spritesheet_UI_Flat.png" id="1_kjtin"]
[ext_resource type="Script" path="res://scripts/end_menu.gd" id="1_wgwmt"]
[ext_resource type="Texture2D" uid="uid://g5uudgnyxm10" path="res://assets/Complete_GUI_Essential_Pack_Free_Version/01_Basic_Collection/01_Flat_Theme/Spritesheets/Spritesheet_UI_Flat_Button_01.png" id="2_vmuo3"]
[ext_resource type="Texture2D" uid="uid://bomhwnu8t3gjq" path="res://assets/Complete_GUI_Essential_Pack_Free_Version/01_Basic_Collection/01_Flat_Theme/Spritesheets/Spritesheet_UI_Flat_Button_02.png" id="3_sa088"]
[ext_resource type="Texture2D" uid="uid://dk2jto3bdd026" path="res://assets/Complete_GUI_Essential_Pack_Free_Version/01_Basic_Collection/01_Flat_Theme/Spritesheets/Spritesheet_UI_Flat_Select_01.png" id="4_1cune"]
[ext_resource type="Texture2D" uid="uid://brhq7vrihlmqy" path="res://assets/Complete_GUI_Essential_Pack_Free_Version/01_Basic_Collection/01_Flat_Theme/Spritesheets/Spritesheet_UI_Flat_Select_02.png" id="5_bsxkr"]
[ext_resource type="FontFile" uid="uid://dvmcje3dpb00a" path="res://assets/bitByBit_ [Font] [Version 1.1]/bitbybit_ [Font].ttf" id="6_o52gs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kxfwb"]
texture = ExtResource("1_kjtin")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
10:2/0 = 0
11:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
22:2/0 = 0
23:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
45:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
10:3/0 = 0
11:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
22:3/0 = 0
23:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
44:3/0 = 0
45:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
10:4/0 = 0
11:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
22:4/0 = 0
23:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
10:5/0 = 0
11:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
22:5/0 = 0
23:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
22:6/0 = 0
23:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
40:6/0 = 0
41:6/0 = 0
42:6/0 = 0
43:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
22:7/0 = 0
23:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
40:7/0 = 0
41:7/0 = 0
42:7/0 = 0
43:7/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
34:8/0 = 0
35:8/0 = 0
36:8/0 = 0
37:8/0 = 0
38:8/0 = 0
39:8/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
34:9/0 = 0
35:9/0 = 0
36:9/0 = 0
37:9/0 = 0
38:9/0 = 0
39:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
10:10/0 = 0
11:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
22:10/0 = 0
23:10/0 = 0
26:10/0 = 0
27:10/0 = 0
30:10/0 = 0
31:10/0 = 0
34:10/0 = 0
35:10/0 = 0
36:10/0 = 0
37:10/0 = 0
38:10/0 = 0
39:10/0 = 0
40:10/0 = 0
41:10/0 = 0
44:10/0 = 0
45:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
10:11/0 = 0
11:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
22:11/0 = 0
23:11/0 = 0
26:11/0 = 0
27:11/0 = 0
30:11/0 = 0
31:11/0 = 0
34:11/0 = 0
35:11/0 = 0
36:11/0 = 0
37:11/0 = 0
38:11/0 = 0
39:11/0 = 0
40:11/0 = 0
41:11/0 = 0
44:11/0 = 0
45:11/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
34:12/0 = 0
35:12/0 = 0
36:12/0 = 0
37:12/0 = 0
38:12/0 = 0
39:12/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
34:13/0 = 0
35:13/0 = 0
36:13/0 = 0
37:13/0 = 0
38:13/0 = 0
39:13/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
10:14/0 = 0
11:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
22:14/0 = 0
23:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
34:14/0 = 0
35:14/0 = 0
40:14/0 = 0
41:14/0 = 0
42:14/0 = 0
43:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
10:15/0 = 0
11:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
22:15/0 = 0
23:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
34:15/0 = 0
35:15/0 = 0
40:15/0 = 0
41:15/0 = 0
42:15/0 = 0
43:15/0 = 0
2:16/0 = 0
3:16/0 = 0
6:16/0 = 0
7:16/0 = 0
10:16/0 = 0
11:16/0 = 0
14:16/0 = 0
15:16/0 = 0
18:16/0 = 0
19:16/0 = 0
22:16/0 = 0
23:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0
31:16/0 = 0
34:16/0 = 0
35:16/0 = 0
2:17/0 = 0
3:17/0 = 0
6:17/0 = 0
7:17/0 = 0
10:17/0 = 0
11:17/0 = 0
14:17/0 = 0
15:17/0 = 0
18:17/0 = 0
19:17/0 = 0
22:17/0 = 0
23:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
30:17/0 = 0
31:17/0 = 0
34:17/0 = 0
35:17/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
10:18/0 = 0
11:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
22:18/0 = 0
23:18/0 = 0
26:18/0 = 0
27:18/0 = 0
30:18/0 = 0
31:18/0 = 0
36:18/0 = 0
37:18/0 = 0
40:18/0 = 0
41:18/0 = 0
42:18/0 = 0
43:18/0 = 0
44:18/0 = 0
45:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
10:19/0 = 0
11:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
22:19/0 = 0
23:19/0 = 0
26:19/0 = 0
27:19/0 = 0
30:19/0 = 0
31:19/0 = 0
36:19/0 = 0
37:19/0 = 0
40:19/0 = 0
41:19/0 = 0
42:19/0 = 0
43:19/0 = 0
44:19/0 = 0
45:19/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s6gbm"]
texture = ExtResource("2_vmuo3")
2:0/0 = 0
3:0/0 = 0
8:0/0 = 0
9:0/0 = 0
14:0/0 = 0
15:0/0 = 0
20:0/0 = 0
21:0/0 = 0
2:1/0 = 0
3:1/0 = 0
8:1/0 = 0
9:1/0 = 0
14:1/0 = 0
15:1/0 = 0
20:1/0 = 0
21:1/0 = 0
2:2/0 = 0
3:2/0 = 0
8:2/0 = 0
9:2/0 = 0
14:2/0 = 0
15:2/0 = 0
20:2/0 = 0
21:2/0 = 0
2:3/0 = 0
3:3/0 = 0
8:3/0 = 0
9:3/0 = 0
14:3/0 = 0
15:3/0 = 0
20:3/0 = 0
21:3/0 = 0
2:4/0 = 0
3:4/0 = 0
8:4/0 = 0
9:4/0 = 0
14:4/0 = 0
15:4/0 = 0
20:4/0 = 0
21:4/0 = 0
2:5/0 = 0
3:5/0 = 0
8:5/0 = 0
9:5/0 = 0
14:5/0 = 0
15:5/0 = 0
20:5/0 = 0
21:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ar6uv"]
texture = ExtResource("3_sa088")
2:0/0 = 0
3:0/0 = 0
8:0/0 = 0
9:0/0 = 0
14:0/0 = 0
15:0/0 = 0
20:0/0 = 0
21:0/0 = 0
2:1/0 = 0
3:1/0 = 0
8:1/0 = 0
9:1/0 = 0
14:1/0 = 0
15:1/0 = 0
20:1/0 = 0
21:1/0 = 0
2:2/0 = 0
3:2/0 = 0
8:2/0 = 0
9:2/0 = 0
14:2/0 = 0
15:2/0 = 0
20:2/0 = 0
21:2/0 = 0
2:3/0 = 0
3:3/0 = 0
8:3/0 = 0
9:3/0 = 0
14:3/0 = 0
15:3/0 = 0
20:3/0 = 0
21:3/0 = 0
2:4/0 = 0
3:4/0 = 0
8:4/0 = 0
9:4/0 = 0
14:4/0 = 0
15:4/0 = 0
20:4/0 = 0
21:4/0 = 0
2:5/0 = 0
3:5/0 = 0
8:5/0 = 0
9:5/0 = 0
14:5/0 = 0
15:5/0 = 0
20:5/0 = 0
21:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_axf8s"]
texture = ExtResource("4_1cune")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fo01x"]
texture = ExtResource("5_bsxkr")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0

[sub_resource type="TileSet" id="TileSet_sitq4"]
sources/0 = SubResource("TileSetAtlasSource_kxfwb")
sources/1 = SubResource("TileSetAtlasSource_s6gbm")
sources/2 = SubResource("TileSetAtlasSource_ar6uv")
sources/3 = SubResource("TileSetAtlasSource_axf8s")
sources/4 = SubResource("TileSetAtlasSource_fo01x")

[sub_resource type="AtlasTexture" id="AtlasTexture_331rk"]
atlas = ExtResource("2_vmuo3")
region = Rect2(16, 96, 64, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o3cj3"]
texture = SubResource("AtlasTexture_331rk")
texture_margin_left = 4.0
texture_margin_bottom = 4.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_lrrh1"]
load_path = "res://.godot/imported/Spritesheet_UI_Flat_Button_01.png-04d0e8096b4941f046e789e5b3718b61.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_e028v"]
atlas = SubResource("CompressedTexture2D_lrrh1")
region = Rect2(208, 96, 64, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_njh1k"]
texture = SubResource("AtlasTexture_e028v")
texture_margin_left = 4.0

[node name="EndMenu" type="Node2D"]
script = ExtResource("1_wgwmt")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_sitq4")
format = 2
layer_0/name = "bg"
layer_0/tile_data = PackedInt32Array(-131075, 1048576, 2, -65539, 1048576, 3, -3, 1048576, 4, 65533, 1048576, 5, 131069, 1048576, 6, 196605, 1048576, 6, -131074, 1114112, 2, -65538, 1114112, 3, -2, 1114112, 4, 65534, 1114112, 5, 131070, 1114112, 6, 196606, 1048576, 6, -131073, 1179648, 2, -65537, 1179648, 3, -1, 1179648, 4, 65535, 1179648, 5, 131071, 1179648, 6, 196607, 1048576, 6, -196608, 1048576, 2, -131072, 1048576, 3, -65536, 1048576, 4, 0, 1048576, 5, 65536, 1048576, 6, 131072, 1048576, 6, -196607, 983040, 2, -131071, 983040, 3, -65535, 983040, 4, 1, 983040, 5, 65537, 983040, 6, 131073, 1048576, 6, -196606, 1048576, 2, -131070, 1048576, 3, -65534, 1048576, 4, 2, 1048576, 5, 65538, 1048576, 6, 131074, 1048576, 6, -131077, 1048576, 2, -65541, 1048576, 3, -5, 1048576, 4, 65531, 1048576, 5, 131067, 1048576, 6, 196603, 983040, 6, -131076, 983040, 2, -65540, 983040, 3, -4, 983040, 4, 65532, 983040, 5, 131068, 983040, 6, 196604, 1048576, 6, -196605, 1114112, 2, -131069, 1114112, 3, -65533, 1114112, 4, 3, 1114112, 5, 65539, 1048576, 6, 131075, 1048576, 6, -196604, 1179648, 2, -131068, 1179648, 3, -65532, 1179648, 4, 4, 1179648, 5, 65540, 1179648, 6, 131076, 1179648, 5, -196603, 1245184, 2, -131067, 1245184, 3, -65531, 1245184, 4, 5, 1245184, 5, 65541, 1245184, 6, 131077, 1245184, 5, -131078, 917504, 2, -65542, 917504, 3, -6, 917504, 4, 65530, 917504, 5, 131066, 917504, 5, 196602, 917504, 6, 262138, 917504, 7, 262139, 983040, 7, 262140, 1048576, 7, 262141, 983040, 7, 262142, 1048576, 7, 262143, 983040, 7, 196608, 983040, 7, 196609, 1048576, 7, 196610, 1114112, 7, 196611, 1179648, 7, 196613, 1245184, 7, 196612, 1179648, 7)
layer_1/name = "fg"
layer_1/tile_data = PackedInt32Array(-131077, 1703936, 2, -65541, 1703936, 3, -131076, 1769472, 2, -65540, 1769472, 3, -131075, 1835008, 2, -65539, 1835008, 3, -196606, 1900544, 2, -131070, 1900544, 3, -196605, 1966080, 2, -131069, 1966080, 3, -196604, 2031616, 2, -131068, 2031616, 3, -131074, 1835008, 2, -65538, 1835008, 3, -131073, 1900544, 2, -65537, 1900544, 3, -196608, 1835008, 2, -131072, 1835008, 3, -196607, 1900544, 2, -131071, 1900544, 3)

[node name="RetryButton" type="Button" parent="."]
offset_left = 10.0
offset_top = 33.0
offset_right = 69.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0.46, 0.982, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_o52gs")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxTexture_o3cj3")
theme_override_styles/hover = SubResource("StyleBoxTexture_o3cj3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_njh1k")
text = "RETRY"

[node name="ExitButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_top = 33.0
offset_right = -10.0
offset_bottom = 54.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.586921, 0.514098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_o52gs")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxTexture_o3cj3")
theme_override_styles/hover = SubResource("StyleBoxTexture_o3cj3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_njh1k")
text = "EXIT"

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="You Tried" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -39.0
offset_right = 62.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.96, 0.4, 0, 1)
theme_override_fonts/font = ExtResource("6_o52gs")
theme_override_font_sizes/font_size = 10
text = "YOU TRIED!"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -8.0
offset_right = -5.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_o52gs")
theme_override_font_sizes/font_size = 10
text = "SCORE:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreValueLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -8.0
offset_right = 93.0
offset_bottom = 6.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_o52gs")
theme_override_font_sizes/font_size = 10
text = "000000m"
vertical_alignment = 1

[node name="GrazeLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = 10.0
offset_right = -5.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_o52gs")
theme_override_font_sizes/font_size = 10
text = "GRAZE:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GrazeValueLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = 10.0
offset_right = 86.0
offset_bottom = 24.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_o52gs")
theme_override_font_sizes/font_size = 10
text = "0
"
vertical_alignment = 1

[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
